Automatically translate pages in foreign language
Fulfills feature request #10

--- a/options/options.html
+++ b/options/options.html
@@ -18,6 +18,12 @@
                 Always show translate icon in the URL bar
             </label>
         </div>
+        <div>
+            <label>
+                <input id="automatically-translate" type="checkbox" value="true" />
+                Automatically translate pages in foreign language
+            </label>
+        </div>
     </form>
     <script src="options.js"></script>
 </body>
